--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "name": "stc-token-migration",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://studentcointeam.github.io/stc-token-migration/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@toruslabs/torus-embed": "^1.9.14",
+    "@walletconnect/web3-provider": "^1.4.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "authereum": "^0.1.14",
+    "bitski": "^0.10.9",
+    "bootstrap": "^4.6.0",
+    "fortmatic": "^2.2.1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "web3": "^1.3.5",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
