--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "authereum": "^0.1.14",
     "bitski": "^0.10.9",
     "bootstrap": "^4.6.0",
+    "chai": "^4.3.4",
     "fortmatic": "^2.2.1",
     "gh-pages": "^3.1.0",
+    "mocha": "^8.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "truffle": "^5.3.1",
     "web-vitals": "^1.1.1",
     "web3": "^1.3.5",
     "web3modal": "^1.9.3"
@@ -31,6 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:contracts": "truffle test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix"
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.10",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.3.1",
