--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,13 @@
 name: Deployment
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Testing"]
+    types: [completed]
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
       matrix:
         node-version: [15.x]
